<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/favorite_back_button"
            android:src="@drawable/back_button"
            android:scaleType="centerInside"
            app:backgroundTint="?android:attr/colorBackground"
            app:tint="?attr/colorOnBackground"
            app:cornerRadius="10dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/favorite_header"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Navigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            tools:ignore="RelativeOverlap"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_downloaded"
                android:textSize="11sp"
                android:layout_gravity="center"
                />

            <Switch
                android:id="@+id/favorite_switch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal|center"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_material_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="9dp"
            android:contentDescription="@string/favorite_play_button"
            android:drawablePadding="0dp"
            android:text="@string/favorite_play_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/orange"
            app:cornerRadius="10dp"
            app:icon="@drawable/play_song_button"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            tools:ignore="TextContrastCheck"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/List"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/scroll_view_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/favorite_list"
            android:fillViewport="true"
            >

            <LinearLayout
                android:id="@+id/scroll_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/song_player_widget_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            >
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>