<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/favorite_empty_song_cover"
            android:scaleType="fitCenter"
            android:background="@color/orange"
            app:srcCompat="@drawable/play_song_button"
            app:tint="@color/white"
            app:cornerRadius="10dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:text="lorem ipsum"
            android:textSize="16sp"
            android:textStyle="bold"
            android:lines="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="2dp"
            android:layout_gravity="center_vertical"
            android:text="lorem ipsum"
            android:lines="1"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            >

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@string/favorite_play_button"
                android:scaleType="centerCrop"
                android:src="@drawable/song_hearted"
                app:backgroundTint="?android:attr/colorBackground"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/favorite_fav_button"
                android:textSize="11sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/favorite_fav_button"
                android:textSize="11sp"
                />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/favorite_empty_list"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>